# thesis

./: .gitignore  .gitmodules  .ignore  Dockerfile  README.md  cross_file.txt  flake.nix  justfile  meson.build  meson_options.txt
csh/: udp1.csh  udp2.csh
lib/freertos/: meson.build
lib/freertos_tcp/: meson.build
src/: csp_utils.h  main.c  main_csp.h  obc_config.h
src/aead/: crypto.c  crypto.h  measure_performance.c  measure_performance.h  meson.build
src/freertos/: FreeRTOSConfig.h  FreeRTOSFATConfig.h  FreeRTOSIPConfig.h  freertos_hooks.h  freertos_required.c  freertos_required.h
src/hardware/: fat_sd_mmc.c  fat_sd_mmc.h  hooks.c  vmem_fat.c  vmem_fat.h
